fixing nav bar too big

--- a/styles/header.css
+++ b/styles/header.css
@@ -8,7 +8,7 @@
 }
 
 .menu-head {
-  margin-right: 150px;
+  margin-right: 15px;
   margin-top: 15px;
 }
 
@@ -27,7 +27,7 @@
 }
 
 .logo-head {
-  margin-right: 100px;
+  margin-right: 10px;
   margin-top: 10px;
 }
 
@@ -45,7 +45,7 @@
 .menu-why,
 .menu-team,
 .menu-blog {
-  margin-right: 45px;
+  margin-right: 10px;
   font-family: "Lato", sans-serif;
   font-weight: 600;
   font-size: 17px;
@@ -194,5 +194,18 @@ body {
   100% {
     bottom: 1080px;
     transform: translateX(-200px);
+  }
+}
+@media (max-width: 650px) {
+.logo-head{
+  order
+}
+}
+@media (min-width: 650px) {
+  .content {
+    width: 43%;
+  }
+  #button {
+    margin: 30px;
   }
 }
